web-infras/parser/tests/fixtures/babel/core/categorized/invalid-assignment-pattern-5/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,3)
1|[([x])] = t;
 | ^
